tests/backslashes-in-string-4.c.err
./tests/backslashes-in-string-4.c:13:77: error: Unescaped newline in string
