tests/backslashes-in-string-4.c
struct foobar
{
    int a;
    int b;
    itn c;
    int d;
};

/* Move to the end */
int
main(int argc, char** argv)
{
    char const* foo = "And this invalid, because of three backslashes: \\\";

    long long long long long long long long long long long long
    long long long long long long long long long long long long
    long long long long long long long long long long long long
    long long long long long long long long long long long long;
};
